# deployment-simulator

./: .env.example  .gitignore  CLAUDE.md  README.md  RESULTS.md  TEST_COVERAGE_ANALYSIS.md  chromadb-upgrade-spec.md  docker-compose.sandbox.yml  field_tested_tactics.py  pyproject.toml  realism-factors-spec.md  research_backed_tactics.py
docs/: index.html  simulation_data.json
examples/canonical_run/: hitl_audit_trail.json  metadata.json  simulation_log.jsonl
src/: __init__.py  main.py  models.py
src/agents/: __init__.py  orchestrator.py  persona.py  provider.py  sandboxed_orchestrator.py  sandboxed_persona.py  strands_orchestrator.py  strands_persona.py
src/dashboard/: app.py  generate_sample_data.py
src/sandbox/: Dockerfile  agent_server.py  sandbox_manager.py
src/simulation/: controller.py  events.py  experiment_runner.py  flywheel_metrics.py  hitl_router.py  profiles.py  realism.py
src/tools/: knowledge_base.py  metrics_tracker.py  replanner.py
tests/: test_agent_factory.py  test_events.py  test_experiment_runner.py  test_flywheel_metrics.py  test_hitl_router.py  test_knowledge_base.py  test_metrics_tracker.py  test_models.py  test_orchestrator_parsing.py  test_personas.py  test_profiles.py  test_realism.py
